[gd_scene load_steps=5 format=3 uid="uid://sylc23nytteq"]

[ext_resource type="Script" path="res://resource/organs/continuous_organ/spike_organ.gd" id="1_n2uu5"]
[ext_resource type="Texture2D" uid="uid://dir4xaqhgm1ng" path="res://assets/tile/陷阱.png" id="2_p5b1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_untwq"]
size = Vector2(48, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cb61w"]
size = Vector2(44, 10)

[node name="SpikeOrgan" type="CharacterBody2D"]
rotation = 4.71239
collision_layer = 48
script = ExtResource("1_n2uu5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p5b1u")
region_enabled = true
region_rect = Rect2(96, 48, 48, 48)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_p5b1u")
region_enabled = true
region_rect = Rect2(96, 32, 48, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_untwq")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_cb61w")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
